Update java.md with advice on how to suppress warnings for Java 24+